Fix Explanation of "Fitts's law experiment"

--- a/public/experiments/fitts-law_agreement.html
+++ b/public/experiments/fitts-law_agreement.html
@@ -26,8 +26,8 @@
 
                 <h2>目的と方法</h2>
                 <p>
-                本実験は、画面に表示に従いマウスを操作するタスクの成績と、視覚イメージに関する個人特性を計測し、
-                その間の関係を明らかにします。
+                本実験は、Fittsの法則に関した実験であり、画面に表示に従いマウスを
+                操作するタスクの成績を計測します。
                 実験にかかる時間は、全体で10分程度になる予定です。
                 </p>
 
@@ -40,8 +40,7 @@
 
                 <h2>個人情報の保護</h2>
                 <p>
-                本実験により得られたデータは個人識別番号を割り振り、
-                そのデータは東洋大学情報連携学部のサーバにて厳重に管理を行います。
+                本実験により得られたデータは個人識別番号を割り振り、サーバにて厳重に管理を行います。
                 氏名を始めとする個人を識別可能な情報は取得しません。
                 そのため、研究に使用する情報は個人識別番号、回答データと反応時間のみとなります。
                 上記の対応を行い、個人情報が外部に漏れることは絶対に無いよう十分留意し、
@@ -54,7 +53,7 @@
                 この研究の成果によっては、特許権など知的財産権が発生する可能性がありますが、その権利は研究者等に帰属し、
                 あなたはその権利を持つことができません。
                 また、本実験にて計測したデータは個人の特定が不可能な形式にて学会・論文、
-                及び本授業（東洋大学情報連携学部　情報連携ビジネス演習IIA）の講義資料として利用させていただくことがあります。
+                に利用させていただくことがあります。
                 </p>
 
                 <h2>同意およびその撤回</h2>
@@ -71,7 +70,9 @@
                 東洋大学情報連携学部<br />
                 青柳 西蔵<br />
                 aoyagi@toyo.jp  <br />
-
+                香川大学想像工学部<br />
+                福森　聡<br />
+                fukumori@eng.kagawa-u.ac.jp  <br />
                 </p>
                 <p>
                     研究に参加される場合は、下のボタンを押して次に進んで下さい。
@@ -86,7 +87,8 @@
                 </p>
                 <p>
                 <h2>Purpose and method</h2>
-                This experiment measures the performance of the task of operating the mouse according to the display on the screen and the personal characteristics of the visual image, and reveals the relationship between them.
+                This experiment associate with Fitts's law.
+                The experiment measures the performance of the task of operating the mouse according to the display on the screen.
                 The experiment takes about 10 minutes in total.
                 <h2>Gathering information</h2>
                 <p>
@@ -98,7 +100,7 @@
                 <h2>Protection of personal information</h2>
                 <p>
                 The data obtained by this experiment is assigned a personal identification number,
-                The data is strictly managed by the server of Faculty of Information Networking for Innovation and Design, Toyo University.
+                The data is strictly managed by the server.
                 Personal information including name will not be obtained.
                 Therefore, the information used for the research is personal identification number, response data and reaction time only.
 
@@ -111,8 +113,7 @@
                 <p>
                 Depending on the outcome of this experiment,
                 intellectual property rights such as patent rights may occur, but the right belongs to researchers, and you can not have that right.
-                In addition, the data measured in this experiment can be used for academic papers,
-                or this classroom (Toyo University College Information Collaboration Business Exercise IIA) as a lecture  material.
+                In addition, the data measured in this experiment can be used for academic papers.
                 </p>
 
                 <h2>Agreement and withdrawal</h2>
@@ -129,7 +130,10 @@
                 <p>
                 Faculty of Information Networking for Innovation and Design, Toyo University <br />
                 Saizo Aoyagi<br />
-                aoyagi@toyo.jp  <br />
+                aoyagi@toyo.jp  <br />                
+                Faculty of Engineering and Design, Kagawa University <br />
+                Satoshi Fukumori<br />
+                fukumori@eng.kagawa-u.ac.jp  <br />                
                 </p>
                 <p>
                     To participate in the experiment, please push the following button.
